--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Моя первая страница с картинкой</h1>
     
     <!-- Изображение -->
-    <img src="cvd_stick_86-1200x800.png" alt="Описание картинки" width="500" height="300">
+    <img src="cvd_stick_86-1200x800.png" alt="Fullscreen Image">
     
     <!-- Подпись к изображению -->
     <p>Это моя любимая картинка!</p>
