--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
     <meta charset="UTF-8">
     <title>Страница с картинкой</title>
 </head>
-<body>
+<body> {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        
+        img {
+            width: 100vw;
+            height: 100vh;
+            object-fit: cover;
+        }
+    </style>
+</head>
+</html>
     <!-- Заголовок -->
     <h1>Моя первая страница с картинкой</h1>
     
