--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Страница с картинкой</title>
 </head>
+    <title> </title>
 <body> {
             margin: 0;
             padding: 0;
