--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Страница с картинкой</title>
 </head>
     <title> </title>
-<body> {
+<body>
+    <h1>Моя первая страница с картинкой</h1>
+    {
             margin: 0;
             padding: 0;
             overflow: hidden;
