--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <title> </title>
     <style>
         body {
-            margin: 0;
+            margin-left: auto;
+            margin-right: auto;
             padding: 0;
             overflow: hidden;
         }
         
         img {
-            width: 200vw;
-            height: 200vh;
+            width: 100vw;
+            height: 100vh;
             object-fit: cover;
         }
     </style>
